--- a/src/Modules/CrestApps.OrchardCore.Users/Views/UserAvatarPart.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Users/Views/UserAvatarPart.Edit.cshtml
@@ -9,8 +9,8 @@
     var modalMediaId = "Modal" + Html.IdFor(m => m);
     var uniqueName = $"{Model.PartFieldDefinition.PartDefinition.Name}-{Model.PartFieldDefinition.Name}";
 }
-<script asp-src="~/OrchardCore.Media/Scripts/media.js" asp-name="media" at="Foot" depends-on="admin, vuejs, sortable, vuedraggable, jQuery-ui"></script>
-<style asp-src="~/OrchardCore.Media/Styles/media.min.css" debug-src="~/OrchardCore.Media/Styles/media.css"></style>
+
+<style asp-name="media" at="Head"></style>
 
 <div class="field-wrapper field-wrapper-@(uniqueName.HtmlClassify())" id="@Html.IdFor(x => x.Paths)_FieldWrapper">
     <label asp-for="Paths">@Model.PartFieldDefinition.DisplayName()</label>
@@ -63,8 +63,9 @@
     <partial name="~/Areas/OrchardCore.Media/Views/Shared/MediaFieldEditLocalization.cshtml" />
 </div>
 
-<script at="Foot">
-    initializeMediaApplication(false, '@Url.Action("MediaApplication", "Admin", new { area = "OrchardCore.Media", extensions = String.Join(',', Model.AllowedExtensions) })', '@Context.Request.PathBase.ToString()');
+<script asp-name="media" at="Foot"></script>
+<script at="Foot" depends-on="media">
+    initializeMediaApplication(false, '@Url.Action("MediaApplication", "Admin", new { area = "OrchardCore.Media", extensions = string.Join(',', Model.AllowedExtensions) })', '@Context.Request.PathBase.ToString()');
 
     initializeMediaField(
         document.getElementById('@Html.IdFor(m => m)'),
@@ -72,5 +73,6 @@
         '@Url.Action("GetMediaItem", "Admin", new { area = "OrchardCore.Media" })',
     @(settings.Multiple ? "true" : "false"),
     @(settings.AllowMediaText ? "true" : "false"),
-    @(settings.AllowAnchors ? "true" : "false"));
+    @(settings.AllowAnchors ? "true" : "false"),
+        '@string.Join(',', Model.AllowedExtensions)');
 </script>
