--- a/src/Modules/CrestApps.OrchardCore.Users/Views/UserFullNamePart.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Users/Views/UserFullNamePart.Edit.cshtml
@@ -6,7 +6,7 @@
 @if (Model.Settings.DisplayName != DisplayNamePropertyType.None)
 {
     <div class="mb-3">
-        <label asp-for="DisplayName">@T["Display Name"]</label>
+        <label asp-for="DisplayName" class="form-label">@T["Display Name"]</label>
         <input asp-for="DisplayName" class="form-control" />
         <span asp-validation-for="DisplayName" class="text-danger"></span>
     </div>
@@ -15,7 +15,7 @@
 @if (Model.Settings.FirstName != DisplayNamePropertyType.None)
 {
     <div class="mb-3">
-        <label asp-for="FirstName">@T["First Name"]</label>
+        <label asp-for="FirstName" class="form-label">@T["First Name"]</label>
         <input asp-for="FirstName" class="form-control" />
         <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
@@ -24,7 +24,7 @@
 @if (Model.Settings.MiddleName != DisplayNamePropertyType.None)
 {
     <div class="mb-3">
-        <label asp-for="MiddleName">@T["Middle Name"]</label>
+        <label asp-for="MiddleName" class="form-label">@T["Middle Name"]</label>
         <input asp-for="MiddleName" class="form-control" />
         <span asp-validation-for="MiddleName" class="text-danger"></span>
     </div>
@@ -33,7 +33,7 @@
 @if (Model.Settings.LastName != DisplayNamePropertyType.None)
 {
     <div class="mb-3">
-        <label asp-for="LastName">@T["Last Name"]</label>
+        <label asp-for="LastName" class="form-label">@T["Last Name"]</label>
         <input asp-for="LastName" class="form-control" />
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
