--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsPart.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsPart.cshtml
@@ -1,3 +1,4 @@
+@using CrestApps.OrchardCore.Subscriptions
 @using CrestApps.OrchardCore.Subscriptions.Core.Models
 @using Microsoft.AspNetCore.Mvc.Localization
 
