add support for viewing a specific step

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowButtons.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowButtons.cshtml
@@ -3,25 +3,33 @@
 @model SubscriptionFlowNavigation
 
 @{
-    var name = Html.NameFor(x => x.Direction);
+    var hasNext = !string.IsNullOrEmpty(Model.NextStep);
 }
 
 <div class="d-flex justify-content-between flex-row-reverse">
 
-    @if (!string.IsNullOrEmpty(Model.NextStep))
+    @if (hasNext && Model.IsPaymentStep)
     {
-        <button type="submit" class="btn btn-success" name="@name" value="Next">@T["Next"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="Next">@T["Pay & Next"]</button>
+    }
+    else if (Model.IsPaymentStep)
+    {
+        <button type="submit" class="btn btn-success" name="Direction" value="Next">@T["Pay & Finish"]</button>
+    }
+    else if (hasNext)
+    {
+        <button type="submit" class="btn btn-success" name="Direction" value="Next">@T["Next"]</button>
     }
     else
     {
-        <button type="submit" class="btn btn-success" name="@name" value="Next">@T["Finish"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="Next">@T["Finish"]</button>
     }
 
     <div></div>
 
     @if (!string.IsNullOrEmpty(Model.PreviousStep))
     {
-        <button type="submit" class="btn btn-info" name="@name" value="Previous">@T["Previous"]</button>
+        <button type="submit" class="btn btn-info" name="Direction" value="Previous">@T["Previous"]</button>
     }
     else
     {
