--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsPart.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsPart.cshtml
@@ -1,19 +1,9 @@
 @using CrestApps.OrchardCore.Subscriptions
 @using CrestApps.OrchardCore.Subscriptions.Core.Models
 @using Microsoft.AspNetCore.Mvc.Localization
+@using CrestApps.OrchardCore.Subscriptions.Extensions;
 
 @model ShapeViewModel<SubscriptionsPart>
-
-@{
-    var amount = Model.Value.DurationType switch
-    {
-        BillingDurationType.Day => T.Plural(Model.Value.BillingDuration, "{0} per day", "{0} per {1} days", Model.Value.BillingAmount.ToString("C"), Model.Value.BillingDuration),
-        BillingDurationType.Week => T.Plural(Model.Value.BillingDuration, "{0} per week", "{0} per {1} weeks", Model.Value.BillingAmount.ToString("C"), Model.Value.BillingDuration),
-        BillingDurationType.Month => T.Plural(Model.Value.BillingDuration, "{0} per month", "{0} per {1} months", Model.Value.BillingAmount.ToString("C"), Model.Value.BillingDuration),
-        BillingDurationType.Year => T.Plural(Model.Value.BillingDuration, "{0} per year", "{0} per {1} years", Model.Value.BillingAmount.ToString("C"), Model.Value.BillingDuration),
-        _ => throw new InvalidOperationException("Duration type is not supported."),
-    };
-}
 
 <div class="row">
     @if (Model.Value.InitialAmount.HasValue)
@@ -23,7 +13,7 @@
     }
 
     <div class="col-6">@T["Billing Amount"]</div>
-    <div class="col-6">@amount</div>
+    <div class="col-6">@T.GetAmount(Model.Value.DurationType, Model.Value.BillingDuration, Model.Value.BillingAmount)</div>
 
     @if (Model.Value.BillingCycleLimit.HasValue)
     {
