--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
@@ -3,7 +3,7 @@
 
 @model SubscriptionViewModel
 
-<form method="post" asp-action="Signup" asp-controller="Subscriptions" asp-route-sessionId="@Model.SessionId">
+<form id="subscription-form" method="post" asp-action="Signup" asp-controller="Subscriptions" asp-route-sessionId="@Model.SessionId">
     <input type="hidden" name="step" value="@Model.Step" />
 
     @await DisplayAsync(Model.Content)
