--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/StripeSubscriptionPayments.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/StripeSubscriptionPayments.Edit.cshtml
@@ -1,4 +1,5 @@
 @using CrestApps.OrchardCore.Stripe.Core
+@using CrestApps.OrchardCore.Subscriptions.Core
 @using CrestApps.OrchardCore.Subscriptions.ViewModels
 
 @model StripeViewModel
@@ -16,139 +17,199 @@ else if (string.IsNullOrEmpty(Model.PublishableKey))
     </div>
 }
 
+<h5 class="card-title py-3">@T["Payment Method"]</h5>
 <div id="card-errors" role="alert" class="alert alert-danger d-none"></div>
 
-<div id="card-element"></div>
+<!-- Additional input fields for billing details -->
+<div class="mb-1">
+    <label for="NameOnBankCard" class="visually-hidden"></label>
+    <input id="NameOnBankCard" type="text" class="form-control" required placeholder="@T["Name as it appears on card"]">
+</div>
 
-<script asp-name="stripe-subscription-payment" depends-on="stripe">
-    const stripe = Stripe('@Model.PublishableKey');
-    const elements = stripe.elements();
-    const card = elements.create('card');
-    card.mount('#card-element');
-    const errorElement = document.getElementById('card-errors');
-    const showError = (message) => {
-        errorElement.textContent = message;
-        errorElement.classList.remove('d-none');
-    };
-    const clearError = () => {
-        errorElement.textContent = '';
-        errorElement.classList.add('d-none');
-    };
-    card.on('change', function (event) {
-        clearError();
+<div id="card-element" class="form-control"></div>
 
-        if (event.error) {
-            showError(event.error.message);
+<script asp-name="stripe"></script>
+<script at="Foot" depends-on="stripe">
+    document.addEventListener('DOMContentLoaded', () => {
+
+        const errorElement = document.getElementById('card-errors');
+        const showError = (message) => {
+            errorElement.textContent = message;
+            errorElement.classList.remove('d-none');
+        };
+        const clearError = () => {
+            errorElement.textContent = '';
+            errorElement.classList.add('d-none');
+        };
+        const getFilteredStyleObject = (element) => {
+            const computedStyle = window.getComputedStyle(element);
+            const styleObject = {};
+            const propertiesToInclude = [
+                'margin',
+                'padding',
+                'color',
+                'font-family',
+                'font-size',
+                'line-height',
+                'border-width',
+                'border-style',
+                'border-color'
+            ];
+
+            propertiesToInclude.forEach(property => {
+                styleObject[property] = computedStyle.getPropertyValue(property);
+            });
+
+            return styleObject;
         }
-    });
+        const applyStylesToStripeCard = (styles) => {
+            return {
+                base: {
+                    color: styles.color || 'black', // default color if not specified
+                    fontSize: styles['font-size'] || '16px', // default font size if not specified
+                    fontFamily: styles['font-family'] || 'Arial, sans-serif', // default font family if not specified
+                    lineHeight: styles['line-height'] || '1.4', // default line height if not specified
+                    border: `${styles['border-width'] || '1px'} ${styles['border-style'] || 'solid'} ${styles['border-color'] || 'black'}` // default border if not specified
+                },
+            };
+        }
+        const payButton = document.getElementById('Subscription_Next_Button')
 
-    const form = document.getElementById('subscription-form');
-
-    form.addEventListener('submit', function (event) {
-        event.preventDefault();
-
-        stripe.createPaymentMethod({
-            type: 'card',
-            card: card,
-            billing_details: {
-                // Include any additional billing details
-            },
-        }).then(function (result) {
-            if (result.error) {
-                errorElement.textContent = result.error.message;
+        const enableButton = (enable) => {
+            if (enable) {
+                payButton.disabled = false;
+                payButton.classList.remove('disabled');
             } else {
-                // Send payment method ID to the server
-                fetch('@StripeConstants.RouteName.CreateSetupIntentEndpoint', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        paymentMethodId: result.paymentMethod.id,
-                        Metadata: {
-                            sessionId: '@Model.SessionId'
-                        }
-                    }),
-                }).then((response) => {
-                    return response.json();
-                }).then((data) => {
-                    if (data.error) {
-                        showError(data.error);
-                    } else {
-                        stripe.confirmCardSetup(data.client_secret)
-                            .then((result) => {
-                                if (result.error) {
-                                    showError(result.error.message);
-                                } else {
-                                    var paymentMethodId = result.setupIntent.payment_method;
-                                    // Send payment method ID to the server to create payment intent and subscription
-                                    fetch('@StripeConstants.RouteName.CreatePaymentIntentEndpoint', {
-                                        method: 'POST',
-                                        headers: {
-                                            'Content-Type': 'application/json',
-                                        },
-                                        body: JSON.stringify({
-                                            customerId: data.customer_id,
-                                            paymentMethodId: paymentMethodId,
-                                            Metadata: {
-                                                sessionId: '@Model.SessionId'
-                                            }
-                                        }),
-                                    }).then((response) => {
-                                        return response.json();
-                                    }).then((paymentData) => {
-                                        if (paymentData.error) {
-                                            showError(paymentData.error);
+                payButton.disabled = true;
+                payButton.classList.remove('disabled');
+            }
+        };
+
+        const stripe = Stripe('@Model.PublishableKey');
+        const elements = stripe.elements();
+        const nameOnBankCardElement = document.getElementById('NameOnBankCard');
+
+        // Generate the filtered style object
+        const filteredStyleObject = getFilteredStyleObject(nameOnBankCardElement);
+
+        // Apply styles to Stripe card
+        const cardStyles = applyStylesToStripeCard(filteredStyleObject);
+
+        const cardElement = elements.create('card',
+            {
+                style: cardStyles
+            });
+        cardElement.mount('#card-element');
+        cardElement.on('change', function (event) {
+            clearError();
+            enableButton(true);
+
+            if (event.error) {
+                showError(event.error.message);
+            }
+        });
+        payButton.addEventListener('click', function (event) {
+            event.preventDefault();
+            enableButton(false);
+
+            stripe.createPaymentMethod({
+                type: 'card',
+                card: cardElement,
+                billing_details: {
+                    name: nameOnBankCardElement.value,
+                },
+            }).then(function (result) {
+                if (result.error) {
+                    showError(result.error.message);
+                } else {
+                    // Send payment method ID to the server
+                    fetch('@Url.RouteUrl(StripeConstants.RouteName.CreateSetupIntentEndpoint)', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            paymentMethodId: result.paymentMethod.id,
+                            Metadata: {
+                                sessionId: '@Model.SessionId'
+                            }
+                        }),
+                    }).then((response) => response.json())
+                        .then((data) => {
+                            if (data.error) {
+                                showError(data.error);
+                            } else {
+                                stripe.confirmCardSetup(data.clientSecret)
+                                    .then((result) => {
+                                        if (result.error) {
+                                            showError(result.error.message);
                                         } else {
-                                            stripe.confirmCardPayment(paymentData.client_secret)
-                                                .then((result) => {
-                                                    if (result.error) {
-                                                        showError(result.error.message);
+                                            var paymentMethodId = result.setupIntent.payment_method;
+                                            // Send payment method ID to the server to create payment intent and subscription
+                                            fetch('@Url.RouteUrl(SubscriptionsConstants.RouteName.CreatePaymentIntentEndpoint)', {
+                                                method: 'POST',
+                                                headers: {
+                                                    'Content-Type': 'application/json',
+                                                },
+                                                body: JSON.stringify({
+                                                    customerId: data.customerId,
+                                                    paymentMethodId: paymentMethodId,
+                                                    sessionId: '@Model.SessionId',
+                                                }),
+                                            }).then((response) => response.json())
+                                                .then((paymentData) => {
+                                                    if (paymentData.error) {
+                                                        showError(paymentData.error);
                                                     } else {
-                                                        // Handle successful payment
-                                                        fetch('@StripeConstants.RouteName.CreateSubscriptionEndpoint', {
-                                                            method: 'POST',
-                                                            headers: {
-                                                                'Content-Type': 'application/json',
-                                                            },
-                                                            body: JSON.stringify({
-                                                                customerId: data.customer_id,
-                                                                paymentMethodId: paymentMethodId,
-                                                                Metadata: {
-                                                                    sessionId: '@Model.SessionId'
-                                                                }
-                                                            }),
-                                                        }).then((response) => {
-                                                            return response.json();
-                                                        }).then((subscriptionData) => {
-                                                            if (subscriptionData.error) {
-                                                                showError(subscriptionData.error);
-                                                            } else {
-                                                                if (subscriptionData.requires_action) {
-                                                                    stripe.confirmCardPayment(subscriptionData.client_secret)
-                                                                        .then(function (result) {
-                                                                            if (result.error) {
-                                                                                showError(result.error.message);
+                                                        stripe.confirmCardPayment(paymentData.clientSecret)
+                                                            .then((result) => {
+                                                                if (result.error) {
+                                                                    showError(result.error.message);
+                                                                } else {
+                                                                    // Handle successful payment
+                                                                    fetch('@Url.RouteUrl(SubscriptionsConstants.RouteName.CreateSubscriptionEndpoint)', {
+                                                                        method: 'POST',
+                                                                        headers: {
+                                                                            'Content-Type': 'application/json',
+                                                                        },
+                                                                        body: JSON.stringify({
+                                                                            customerId: data.customerId,
+                                                                            paymentMethodId: paymentMethodId,
+                                                                            sessionId: '@Model.SessionId',
+                                                                        }),
+                                                                    }).then((response) => response.json())
+                                                                        .then((subscriptionData) => {
+                                                                            if (subscriptionData.error) {
+                                                                                showError(subscriptionData.error);
                                                                             } else {
-                                                                                const submitEvent = new Event("submit", { bubbles: true, cancelable: true });
-                                                                                form.dispatchEvent(submitEvent);
+                                                                                const form = document.getElementById('subscription-form');
+
+                                                                                if (subscriptionData.status == 'requires_action') {
+                                                                                    stripe.confirmCardPayment(subscriptionData.clientSecret)
+                                                                                        .then(function (result) {
+                                                                                            if (result.error) {
+                                                                                                showError(result.error.message);
+                                                                                            } else {
+                                                                                                const submitEvent = new Event("submit", { bubbles: true, cancelable: true });
+                                                                                                form.dispatchEvent(submitEvent);
+                                                                                            }
+                                                                                        });
+                                                                                } else {
+                                                                                    const submitEvent = new Event("submit", { bubbles: true, cancelable: true });
+                                                                                    form.dispatchEvent(submitEvent);
+                                                                                }
                                                                             }
                                                                         });
-                                                                } else {
-                                                                    const submitEvent = new Event("submit", { bubbles: true, cancelable: true });
-                                                                    form.dispatchEvent(submitEvent);
                                                                 }
-                                                            }
-                                                        });
+                                                            });
                                                     }
                                                 });
                                         }
                                     });
-                                }
-                            });
-                    }
-                });
-            }
+                            }
+                        });
+                }
+            });
         });
     });
 </script>
