--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowButtons.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionFlowButtons.cshtml
@@ -6,30 +6,30 @@
     var hasNext = !string.IsNullOrEmpty(Model.NextStep);
 }
 
-<div class="d-flex justify-content-between flex-row-reverse">
+<div class="d-flex justify-content-between flex-row-reverse mt-3">
 
     @if (hasNext && Model.IsPaymentStep)
     {
-        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue">@T["Pay & Next"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue" id="Subscription_Next_Button">@T["Pay & Next"]</button>
     }
     else if (Model.IsPaymentStep)
     {
-        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue">@T["Pay & Finish"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue" id="Subscription_Next_Button">@T["Pay & Finish"]</button>
     }
     else if (hasNext)
     {
-        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue">@T["Next"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue" id="Subscription_Next_Button">@T["Next"]</button>
     }
     else
     {
-        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue">@T["Finish"]</button>
+        <button type="submit" class="btn btn-success" name="Direction" value="@SubscriptionFlowNavigation.NextValue" id="Subscription_Next_Button">@T["Finish"]</button>
     }
 
     <div></div>
 
     @if (!string.IsNullOrEmpty(Model.PreviousStep))
     {
-        <button type="submit" class="btn btn-info" name="Direction" value="@SubscriptionFlowNavigation.PreviousValue">@T["Previous"]</button>
+        <button type="submit" class="btn btn-info" name="Direction" value="@SubscriptionFlowNavigation.PreviousValue" id="Subscription_Previous_Button">@T["Previous"]</button>
     }
     else
     {
