--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using CrestApps.OrchardCore.Subscriptions.Extensions;
 
-@model ShapeViewModel<SubscriptionsPart>
+@model ShapeViewModel<SubscriptionPart>
 
 <div class="row">
     @if (Model.Value.InitialAmount.HasValue)
